# yew-todo-app

./: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
src/: main.rs
