[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
gloo-storage = "0.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
