[package]
name = "todo" 
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
gloo-storage = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
web-sys = { version = "0.3", features = ["HtmlInputElement", "Event", "FocusEvent"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"